--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -609,8 +609,8 @@
   }
 
   .navIconLink {
-    width: 34px;
-    height: 34px;
+    width: 32px;
+    height: 32px;
   }
 
   .navIcon {
